experimental/ImPlay.Fs/mpv-dev/include/mpv/client.h


typedef struct mpv_handle mpv_handle;
MPV_EXPORT void mpv_free(void *data);
MPV_EXPORT mpv_handle *mpv_create(void);
MPV_EXPORT int mpv_initialize(mpv_handle *ctx);
MPV_EXPORT void mpv_terminate_destroy(mpv_handle *ctx);
typedef enum mpv_format {
    MPV_FORMAT_NONE             = 0,
    MPV_FORMAT_STRING           = 1,
    MPV_FORMAT_OSD_STRING       = 2,
    MPV_FORMAT_FLAG             = 3,
    MPV_FORMAT_INT64            = 4,
    MPV_FORMAT_DOUBLE           = 5,
    MPV_FORMAT_NODE             = 6,
    MPV_FORMAT_NODE_ARRAY       = 7,
    MPV_FORMAT_NODE_MAP         = 8,
    MPV_FORMAT_BYTE_ARRAY       = 9
} mpv_format;
MPV_EXPORT int mpv_set_option_string(mpv_handle *ctx, const char *name, const char *data);
MPV_EXPORT int mpv_command(mpv_handle *ctx, const char **args);
MPV_EXPORT int mpv_set_property(mpv_handle *ctx, const char *name, mpv_format format,
                                void *data);
MPV_EXPORT int mpv_set_property_string(mpv_handle *ctx, const char *name, const char *data);
MPV_EXPORT int mpv_get_property(mpv_handle *ctx, const char *name, mpv_format format,
                                void *data);
MPV_EXPORT char *mpv_get_property_string(mpv_handle *ctx, const char *name);
MPV_EXPORT int mpv_observe_property(mpv_handle *mpv, uint64_t reply_userdata,
                                    const char *name, mpv_format format);
typedef struct mpv_event {
    mpv_event_id event_id;
    int error;
    uint64_t reply_userdata;
    void *data;
} mpv_event;
MPV_EXPORT int mpv_request_log_messages(mpv_handle *ctx, const char *min_level);
MPV_EXPORT mpv_event *mpv_wait_event(mpv_handle *ctx, double timeout);
MPV_EXPORT void mpv_set_wakeup_callback(mpv_handle *ctx, void (*cb)(void *d), void *d);