experimental/ImPlay.Fs/mpv-dev/include/mpv/render.h


typedef struct mpv_render_context mpv_render_context;
typedef struct mpv_render_param {
    enum mpv_render_param_type type;
    void *data;
} mpv_render_param;
MPV_EXPORT int mpv_render_context_create(mpv_render_context **res, mpv_handle *mpv,
                                         mpv_render_param *params);
typedef void (*mpv_render_update_fn)(void *cb_ctx);
MPV_EXPORT void mpv_render_context_set_update_callback(mpv_render_context *ctx,
                                                       mpv_render_update_fn callback,
                                                       void *callback_ctx);
MPV_EXPORT uint64_t mpv_render_context_update(mpv_render_context *ctx);
MPV_EXPORT int mpv_render_context_render(mpv_render_context *ctx, mpv_render_param *params);
MPV_EXPORT void mpv_render_context_free(mpv_render_context *ctx);